# pedalmetrics

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: coverage.yml  release.yml  test.yml
assets/: icon.icns
crates/app/: Cargo.toml
crates/app/src/: app.rs  main.rs
crates/app/src/ui/: control_panel.rs  mod.rs  onboarding.rs  preview.rs  render_overlay.rs  template_editor.rs  timeline.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: activity.rs  constant.rs  encoder.rs  gradient.rs  lib.rs  plot.rs  processing.rs  renderer.rs  template.rs
crates/core/tests/fixtures/: sample_30s.gpx
scripts/: macos_bundle_ffmpeg.sh
templates/: init_template.json  template.schema.json  walker_crit_a.json
